--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-	height: 2000px;
+	/*height: 2000px;*/
 	padding-top: 120px;
 	
 }
@@ -80,4 +80,10 @@ body{
 	font-size: 24px;
 	margin-top:100px;
 	color: #e134eb;
+}
+.footer{
+	width: 100%;
+	height: 150px;
+	background-color: #e134eb;
+	margin-top: 100px;
 }
